--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -17,6 +17,7 @@ steps:
 
 - script: |
     npm install
+     npm audit fix
     npx wdio run ./wdio.conf.js
   displayName: 'npm install and build'
 
