--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -19,7 +19,7 @@ steps:
     npm install
 
        npm audit fix
-    npm wdio run ./wdio.conf.js
+    npx wdio wdio.config.js
   displayName: 'npm install and build'
 
 - task: PublishTestResults@2
